feat: implementar servidor Express e corrigir problemas do Prisma

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 # Database Configuration
-DATABASE_URL="mysql://username:password@localhost:3306/pregiato_talents"
+DATABASE_URL="mysql://root:nmZKnTmDpQIwmvRBYIoIbFjYyaiZPoEq@gondola.proxy.rlwy.net:23254/railway"
 
 # Clerk Configuration
 VITE_CLERK_PUBLISHABLE_KEY="pk_test_c21pbGluZy1tYW1tb3RoLTYuY2xlcmsuYWNjb3VudHMuZGV2JA"
