qr code gerado com sucesso

--- a/front/package.json
+++ b/front/package.json
@@ -19,6 +19,7 @@
     "@fontsource/merriweather": "^5.2.9",
     "@fontsource/roboto": "^5.2.6",
     "@hookform/resolvers": "^3.9.0",
+    "@microsoft/signalr": "^9.0.6",
     "@mui/icons-material": "^7.2.0",
     "@nextui-org/autocomplete": "^2.3.9",
     "@nextui-org/react": "^2.6.11",
