--- a/back/Pregiato.API/Pregiato.API.csproj
+++ b/back/Pregiato.API/Pregiato.API.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="5.0.1" />
     <PackageReference Include="PuppeteerSharp" Version="13.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
   </ItemGroup>
 
   <ItemGroup>
