--- a/front/package.json
+++ b/front/package.json
@@ -10,13 +10,15 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "svgo:crm": "svgo -i public/icons/crm-flaticon.svg -o public/icons/crm.svg --config=svgo.config.cjs"
   },
   "dependencies": {
     "@clerk/backend": "^2.6.2",
     "@clerk/clerk-react": "^5.38.1",
     "@fontsource/inter": "^5.2.6",
     "@fontsource/merriweather": "^5.2.9",
+    "@fontsource/poppins": "^5.2.6",
     "@fontsource/roboto": "^5.2.6",
     "@hookform/resolvers": "^3.9.0",
     "@microsoft/signalr": "^9.0.6",
@@ -70,6 +72,7 @@
     "jspdf": "^3.0.1",
     "lucide-react": "^0.462.0",
     "next-themes": "^0.4.6",
+    "papaparse": "^5.5.3",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.6",
     "qrcode": "^1.5.4",
@@ -104,6 +107,7 @@
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
     "prisma": "^6.13.0",
+    "svgo": "^4.0.0",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
