rocessos de exibir perfil do talento

--- a/front/.env
+++ b/front/.env
@@ -1,4 +1,9 @@
-VITE_CLERK_PUBLISHABLE_KEY=pk_test_c21pbGluZy1tYW1tb3RoLTYuY2xlcmsuYWNjb3VudHMuZGV2JA
-VITE_CLERK_SECRET_KEY=sk_test_SRNMuIeWmQEV8HHc47FGK7iidGL4DiLKx93ygNisSh
-VITE_ENABLE_CLERK=true
+# Configurações do Clerk
+VITE_CLERK_PUBLISHABLE_KEY=pk_test_c2hhcnAtZWVsLTY0LmNsZXJrLmFjY291bnRzLmRldiQ
+
+# Configurações da API
 VITE_API_URL=http://localhost:5656
+
+# Configurações de desenvolvimento
+VITE_DEV_MODE=true
+VITE_ENABLE_CLERK=true
