--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -4,11 +4,12 @@
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copia os arquivos de projeto para restaurar dependências
+# Copia os arquivos de projeto
 COPY Pregiato.API/Pregiato.API.csproj Pregiato.API/
 COPY Pregiato.Core/Pregiato.Core.csproj Pregiato.Core/
 COPY Pregiato.Application/Pregiato.Application.csproj Pregiato.Application/
 COPY Pregiato.Infrastructure/Pregiato.Infrastructure.csproj Pregiato.Infrastructure/
+COPY Directory.Build.props .
 
 # Restaura dependências
 WORKDIR /src/Pregiato.API
@@ -17,7 +18,7 @@ RUN dotnet restore "Pregiato.API.csproj"
 # Copia todo o código fonte
 COPY . .
 
-# Publica a aplicação (Release, sem self-contained)
+# Publica a aplicação
 RUN dotnet publish "Pregiato.API.csproj" -c Release --no-self-contained -o /app/publish
 
 # ---------------------------------------
