--- a/zap-blaster-projeto/.dockerignore
+++ b/zap-blaster-projeto/.dockerignore
@@ -1,4 +1,4 @@
-# Dependências
+# Node modules
 node_modules/
 npm-debug.log*
 yarn-debug.log*
@@ -14,56 +14,59 @@ pids/
 *.seed
 *.pid.lock
 
-# Coverage directory usado por ferramentas como istanbul
+# Coverage directory used by tools like istanbul
 coverage/
 
-# Diretórios de sessão do WhatsApp (serão recriados)
-session/
-whatsapp_data/
-temp/
-downloads/
+# nyc test coverage
+.nyc_output/
 
-# Arquivos de cache
-.cache/
-.npm/
-.yarn/
+# Dependency directories
+jspm_packages/
 
-# Arquivos de ambiente local
+# Optional npm cache directory
+.npm
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Arquivos de sistema
-.DS_Store
-Thumbs.db
+# Session data
+session/
+whatsapp_data/
+temp/
+downloads/
 
-# Arquivos de IDE
+# IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
 
-# Arquivos temporários
-*.tmp
-*.temp
-
-# Arquivos de backup
-*.bak
-*.backup
-
-# Arquivos de teste
-test/
-tests/
-__tests__/
-*.test.js
-*.spec.js
-
-# Documentação
-README.md
-*.md
-docs/
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
 
 # Git
 .git/
 .gitignore
+
+# Documentation
+*.md
+README*
