--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -11,9 +11,13 @@ WORKDIR /app
 
 # Copiar arquivos de dependências
 COPY package*.json ./
+COPY prisma ./prisma/
 
-# Instalar dependências
-RUN npm ci --only=production
+# Instalar todas as dependências (incluindo devDependencies para o build)
+RUN npm ci
+
+# Gerar cliente Prisma
+RUN npx prisma generate
 
 # Copiar código fonte
 COPY . .
@@ -22,7 +26,7 @@ COPY . .
 RUN npm run build
 
 # ---------------------------------------
-# Etapa 2: Production
+# Etapa 2: Production - Express Server
 # ---------------------------------------
 FROM node:18-alpine AS production
 
@@ -31,28 +35,31 @@ RUN apk add --no-cache libc6-compat
 
 # Criar usuário não-root
 RUN addgroup -g 1001 -S nodejs && \
-    adduser -S nextjs -u 1001
+    adduser -S nodejs -u 1001
 
 # Criar diretório da aplicação
 WORKDIR /app
 
 # Copiar arquivos de dependências
 COPY package*.json ./
+COPY prisma ./prisma/
 
 # Instalar apenas dependências de produção
-RUN npm ci --only=production && npm cache clean --force
+RUN npm ci --omit=dev && \
+    npx prisma generate && \
+    npm cache clean --force
 
-# Copiar arquivos buildados da etapa anterior
-COPY --from=build /app/dist ./dist
-COPY --from=build /app/public ./public
-COPY --from=build /app/server ./server
+# Copiar arquivos necessários da etapa de build
+COPY --from=build --chown=nodejs:nodejs /app/dist ./dist
+COPY --from=build --chown=nodejs:nodejs /app/public ./public
+COPY --chown=nodejs:nodejs server ./server
 
 # Criar diretórios necessários
 RUN mkdir -p /app/logs && \
-    chown -R nextjs:nodejs /app
+    chown -R nodejs:nodejs /app
 
 # Mudar para usuário não-root
-USER nextjs
+USER nodejs
 
 # Expor porta
 EXPOSE 8080
@@ -60,6 +67,10 @@ EXPOSE 8080
 # Variáveis de ambiente
 ENV NODE_ENV=production
 ENV PORT=8080
+
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD node -e "require('http').get('http://localhost:8080/api/health', (res) => { process.exit(res.statusCode === 200 ? 0 : 1); })"
 
 # Comando para servir a aplicação
 CMD ["node", "server/index.cjs"]
