--- a/front/.dockerignore
+++ b/front/.dockerignore
@@ -4,79 +4,51 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
+# Build output
 dist/
 build/
-.next/
-out/
 
 # Environment files
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.development
+.env.production
+.env.*.local
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
-# OS generated files
+# OS files
 .DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
 Thumbs.db
 
 # Git
 .git/
 .gitignore
 
-# Logs
-logs/
-*.log
-
-# Runtime data
-pids/
-*.pid
-*.seed
-*.pid.lock
-
-# Coverage directory used by tools like istanbul
+# Tests
 coverage/
-
-# nyc test coverage
 .nyc_output/
 
-# Dependency directories
-jspm_packages/
-
-# Optional npm cache directory
+# Misc
+.eslintcache
 .npm
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
 .yarn-integrity
 
-# Documentation
-*.md
-README*
-
-# Test files
-**/*.test.*
-**/*.spec.*
-**/__tests__/
-
-# Development files
-docker-compose*.yml
-Dockerfile*
+# Docker
+Dockerfile
 .dockerignore
+docker-compose*.yml
+
+# Documentation
+README.md
+*.md
+
+# Temporary files
+*.tmp
+*.temp
+*.log
