--- a/zap-blaster-projeto/package.json
+++ b/zap-blaster-projeto/package.json
@@ -16,6 +16,7 @@
     "express": "^4.18.2",
     "minio": "^8.0.6",
     "mysql2": "^3.6.0",
+    "opossum": "^8.5.0",
     "qrcode": "^1.5.3",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.23.0"
